dfir_rs/tests/compile-fail-stable/surface_unknown_operators.rs
../compile-fail/surface_unknown_operators.rs